--- a/Interstellar Travel Customer Satisfaction Analysis/models/model_config.yaml
+++ b/Interstellar Travel Customer Satisfaction Analysis/models/model_config.yaml
@@ -1,5 +1,7 @@
-classifier: GradientBoostingRegressor
-classifier__max_depth: 10
-classifier__min_samples_leaf: 20
-classifier__min_samples_split: 20
-scaler: null
+GradientBoostingRegressor:
+  max_depth: 10
+  min_samples_leaf: 20
+  min_samples_split: 20
+  random_state: 42
+PCA:
+  n_components: 11
